--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -153,6 +153,7 @@ button:disabled {
     position: fixed;
     bottom:0;
     z-index: 5;
+    width:100%;
     display: flex;
     flex-shrink: 0;
     margin-top: 16px;
